[package]
name = "dragon-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bs58 = "0.5.1"
dotenv = "0.15.0"
futures = "0.3.31"
solana-client = "~2.1.1"
solana-sdk = "~2.1.1"
solana-transaction-status = "~2.1.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
yellowstone-grpc-client = "5.0.0"
yellowstone-grpc-proto = "5.0.0"
